# cnter

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
cnter/: __init__.py
cnter/config/: db.py
cnter/core/: __init__.py
cnter/core/adapters/: orm.py
cnter/core/adapters/message/: bus.py
cnter/core/adapters/repository/: abstract.py  counter.py  user.py
cnter/core/config/: database.py
cnter/core/domain/: events.py  model.py
cnter/core/models/: __init__.py
cnter/core/services/: __init__.py  counter.py  user.py
src/Counter/domain/: Properties.py
src/apps/backend/: app.py  config.py  dependencies.py
src/contexts/: setup.py
src/domain/entities/: Counter.py  CounterMembers.py  User.py
src/domain/repositories/: CounterRepository.py  __init__.py
src/domain/value_objects/: UserId.py  __init__.py
tests/: conftest.py  test_cnter.py
tests/Counter/application/: test_counter_creator.py  test_counter_finder.py  test_counter_incrementer.py  test_counter_joiner.py  test_counter_kicker.py  test_counter_leaver.py
tests/Counter/domain/: CounterIdStub.py  CounterPrivateStub.py  CounterStub.py  UserIdStub.py  UserStub.py  __init__.py
tests/Counter/fakes/: FakeCounterRepository.py  __init__.py
tests/Counter/infrastructure/: FakeCounterRepository.py
tests/application/: counter.py
tests/apps/init/: mongo-init.js
tests/domain/: stubs.py  test_counter.py  test_user.py
tests/integration/repository/: counter_repository_test.py
tests/unit/domain/: model_test.py
tests/unit/service/: counter_service_test.py
(+65 files in other folders)
