[tool.poetry]
name = "cnter"
version = "0.1.0"
description = "a counter-based social app"
authors = ["sverdejot <sverdejot@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
