[tool.poetry]
name = "cnter"
version = "0.1.0"
description = "a counter-based social app"
authors = ["sverdejot <sverdejot@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"
python-dotenv = "^0.21.0"
motor = "^3.1.1"
umongo = "^3.1.0"


[tool.poetry.group.test.dependencies]
flaky = "^3.7.0"
pytest = "^7.2.0"
behave = "^1.2.6"
pytest-asyncio = "^0.20.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
